objects/External_CI_Setting__c.object
<CustomObject>
    <fields>
        <fullName>API_Token__c</fullName>
        <label>API Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Tool__c</fullName>
        <label>CI Tool</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jenkins</fullName>
                </value>
                <value>
                    <fullName>Bamboo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credential Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>External CI Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CI_Tool__c</columns>
        <columns>Endpoint__c</columns>
        <columns>Username__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>External CI Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External CI Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>